# nixos-config

./: .envrc  .gitignore  .mcp.json  .sops.yaml  AGENTS.md  CLAUDE.md  README.md  TODOS.md  bkp-conf.nix  configuration.nix  constants.nix  create-secrets.sh  flake.nix  hardware-configuration.nix  hie.yaml  home.nix
.codex/: config.toml
certs/: README.md  ca.cert.pem  wildcard-ec.crt
common/: zram.nix
compose/: actual-budget.yml  grafana.yml  home-assistant.yml  homer.yml  immich.yml  node-exporter.yml  paperless.yml  pihole.yaml  pihole.yml  prometheus.yml  qbittorrent.yml  stirling-pdf.yml  syncthing.yml
darwin-modules/: keyboard-watcher.nix  launchd-agents.nix  nix-settings.nix  raycast.nix
darwin-modules/keyboard-watcher/: Cargo.toml
darwin-modules/keyboard-watcher/src/: main.rs
docker-compose/: qbittorrent-compose.yaml  start.sh
dockerCompose/: qbittorrent.yml  syncthing.yml
docs/: cross-platform-modules.md  keyboard-watcher.md  new-main-ssh-key.md
dotfiles/: aerospace.toml  docker-volume-backup.sh  docker-volume-cp.sh  docker-volume-restore.sh  gemini_cli_settings.json  htoprc  i4-update-host.sh  ideavimrc  p10k.zsh  prometheus.yml  resti-profile.toml  resticprofile.toml  screenrc  set-power.py
home/: base.nix  dev.nix  fonts.nix  gaming.nix  gnome.nix  graphics.nix  gui-apps.nix  ha-mcp.nix  jetbrains.nix  macos.nix  neovim.nix  nixvim.nix  personal.nix  raycast.nix  zed.nix
modules/: actual-budget.nix  apps.nix  avahi.nix  backup.nix  base.nix  console-disable-screen-timeout.nix  dashboard.nix  deploy.nix  docker-compose-auto-update.nix  (+26 more)
(+232 files in other folders)
